[package]
name = "bifrost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
tracing = "*"
tracing-subscriber = { version = "0.3", default-features = true, features = ["env-filter"] }
askama = "*"
strum = "*"
strum_macros = "*"
