[package]
name = "bifrost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
dotenv = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
tracing = "*"
tracing-subscriber = { version = "0.3", default-features = true, features = ["env-filter"] }
askama = "*"
strum = "*"
strum_macros = "*"
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"] }
chrono = { version = "0.4.24", features = ["serde"] }
